@@ -1,4 +1,4 @@
-.TH SG_SES "8" "October 2007" "sg3_utils\-1.25" SG3_UTILS
+.TH SG_SES "8" "March 2008" "sg3_utils\-1.26" SG3_UTILS
 .SH NAME
 sg_ses \- send controls and fetch status from a SCSI Enclosure
 Services (SES) device
@@ -26,7 +26,7 @@ Arguments to long options are mandatory for short options as well.
 The options are arranged in alphabetical order based on the long
 option name.
 .TP
-\fB\-b\fR, \fB\-\-byte\fR=\fIB1\fR
+\fB\-b\fR, \fB\-\-byte1\fR=\fIB1\fR
 some control pages need byte 1 (i.e. the second byte) of the cdb set.
 Only required in rare cases when the \fI\-\-control\fR option is also set.
 Default is 0; \fIB1\fR is in decimal unless it is prefixed by '0x'
