@@ -2,7 +2,7 @@ sg3-utils (1.26-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Sun, 16 Mar 2008 16:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Tue, 18 Mar 2008 13:00:00 -0400
 
 sg3-utils (1.25-0.1) unstable; urgency=low
 
