@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.26 [20080316]
+Changelog for sg3_utils-1.26 [20080318]
   - sg_ses: sync with ses2r19b
   - sg_get_config: sync with mmc6r01
     - allow Microcode upgrade and DVD read feature descriptors
@@ -34,6 +34,7 @@ Changelog for sg3_utils-1.26 [20080316]
     - add sg_get_sense_filemark_eom_ili() function (MMC uses ILI)
     - add sense key specific unit attention condition queue
       overflow decoding
+  - multiple documentation corrections provided by Dan Horak
   - sg_cmds_mmc: add sg_ll_set_streaming() function
   - win32/MinGW: define SG3_UTILS_MINGW when detected
   - remove archive/pre_configure subdirectory
